--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
-# FROM ubuntu:latest
+FROM ubuntu:latest
 FROM python:3.8.1
 COPY ./*.py /exp/
+COPY ./*.joblib /exp/ 
 COPY ./requirements.txt /exp/requirements.txt
 RUN pip3 install --no-cache-dir -r /exp/requirements.txt
 WORKDIR /exp
-CMD ["python3", "./plot_graphs.py"]
+CMD ["export FLASK_APP = ./api/app.py ; flask run"]
