final exam submission

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,10 @@
 # FROM ubuntu:latest
 FROM python:3.8.1
+COPY "run.sh" .
+RUN ["chmod", "+x", "./run.sh"]
 COPY mlops /exp/mlops
 COPY ./requirements.txt /exp/requirements.txt
 RUN pip3 install --no-cache-dir -r /exp/requirements.txt
 WORKDIR /exp
-CMD ["python3", "./mlops/plot_graphs.py"]
+ENTRYPOINT [ "./run.sh" ]
+#CMD ["python3", "./mlops/plot_graphs.py"]
