--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,20 @@ matplotlib==3.5.3
 scikit-learn==1.1.2
 pytest==7.1.3
 flask==2.2.2
+
+# mlops2022
+cycler==0.11.0
+fonttools==4.36.0
+joblib==1.1.0
+kiwisolver==1.4.4
+matplotlib==3.5.3
+numpy==1.23.2
+packaging==21.3
+Pillow==9.2.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+scikit-learn==1.1.2
+scipy==1.9.0
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.1.0
